--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "html2canvas": "^1.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "vue-pokemon-cards-css": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-basic-ssl": "^2.1.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "sass": "^1.94.2",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
